# handler/product/getProducts.go
@@ -7,6 +7,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary List products
+// @Description List all products
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Success 200 {object} product.GetAllProductsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /products [get]
 func GetAllProductsHendler(ctx *gin.Context) {
 	products := []schemas.Products{}
 
