# schemas/product.go
@@ -17,7 +17,7 @@ type ProductResponse struct{
 	Id uint `json:"id"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
-	DeletedAt gorm.DeletedAt `json:"deleted_at,omitempty"`
+	DeletedAt *time.Time `json:"deleted_at,omitempty"`
 	Name string `json:"name"`
 	Price float64 `json:"price"`
 	Description string `json:"description"`
